--- a/assets/css/1-base/base.scss
+++ b/assets/css/1-base/base.scss
@@ -6,6 +6,7 @@
 
 body {
     background-color: $VeryDarkBlue;
+    font-family: $inter;
     @include font-styling($White, .875rem, 400);
     padding: 0 1rem;
 }
