--- a/assets/css/1-base/_variaveis.scss
+++ b/assets/css/1-base/_variaveis.scss
@@ -10,7 +10,7 @@ $YouTube: hsl(348, 97%, 39%);
 
 /*Dark Theme*/
 $ToggleDarkTheme: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
-$VeryDarkBlue: hsl(230, 17%, 14%);
+$DarkBlue: hsl(230, 17%, 14%);
 $VeryDarkBlue : hsl(232, 19%, 15%);
 $DarkDesaturatedBlue: hsl(228, 28%, 20%);
 $DesaturatedBlue: hsl(228, 34%, 66%);
