--- a/assets/css/2-componentes/_1-header.scss
+++ b/assets/css/2-componentes/_1-header.scss
@@ -3,6 +3,7 @@
 .header {
     padding-top: 2.5rem;
     margin-bottom: 2.5rem;
+    position: relative;
 
     &__branding {
         border-bottom: 1px solid $DesaturatedBlue;
@@ -35,6 +36,7 @@
             width: 48px;
             height: 24px;
             border-radius: 1.5rem;
+            cursor: pointer;
 
             .checkbox {
                 /* Estilização do input checkbox */
@@ -47,11 +49,59 @@
                 transform: translateY(-5%);
                 top: 0px;
                 left: 0px;
+                cursor: pointer;
             }
             
             .checkbox:checked {
                 background-color: $White;
             }
+        }
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100vw; /* Usamos vw (viewport width) para garantir a largura total */
+        height: 29vh; /* Ajuste a altura desejada */
+        background-color: $VeryDarkBlue;
+        z-index: -1;
+        border-radius: 0 0 1rem 1rem;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 2.75rem;
+
+        &__branding {   
+            border-bottom: none;
+            margin-bottom: 0;
+
+            .header__title {
+                @include font-styling($White, 1.75rem, 700);
+            }
+    
+            .header__followers {
+                padding-bottom: 0;
+            }
+        }
+    
+        &__dark-mode {
+            gap: .875rem;
+        }
+    }
+}
+
+@media screen and (min-width: 1441px) {
+    .header {    
+        &::after {
+            height: 270%; /* Ajuste a altura desejada */
         }
     }
 }
