--- a/assets/css/2-componentes/_2-card-section.scss
+++ b/assets/css/2-componentes/_2-card-section.scss
@@ -66,3 +66,22 @@
         }
     }
 }
+
+@media screen and (min-width: 768px) {
+    .main {
+        .card-section {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .main {
+        .card-section {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            gap: 1.875rem;
+        }
+    }
+}
