--- a/assets/css/1-base/base.scss
+++ b/assets/css/1-base/base.scss
@@ -12,6 +12,10 @@ body {
     padding: 0 1rem;
 
     height: 100vh;
+
+    &.light {
+        background-color: $White;
+    }
 }
 
 @media screen and (min-width: 375px) {
