--- a/assets/css/1-base/base.css
+++ b/assets/css/1-base/base.css
@@ -71,7 +71,6 @@ table {
 .header {
   padding-top: 2.5rem;
   margin-bottom: 2.5rem;
-  position: relative;
 }
 .header::after {
   content: "";
@@ -79,8 +78,8 @@ table {
   top: 0%;
   left: 50%;
   transform: translateX(-50%);
-  width: 100vw; /* Usamos vw (viewport width) para garantir a largura total */
-  height: 29vh; /* Ajuste a altura desejada */
+  width: 100%; /* Usamos vw (viewport width) para garantir a largura total */
+  height: 255px; /* Ajuste a altura desejada */
   background-color: hsl(232, 19%, 15%);
   z-index: -1;
   border-radius: 0 0 1rem 1rem;
@@ -179,11 +178,6 @@ table {
   }
   .header__dark-mode {
     gap: 0.875rem;
-  }
-}
-@media screen and (min-width: 1441px) {
-  .header::after {
-    height: 270%; /* Ajuste a altura desejada */
   }
 }
 /*Colors */
@@ -378,9 +372,6 @@ table {
   }
 }
 @media screen and (min-width: 1200px) {
-  .main .overview-section {
-    padding-bottom: 0px;
-  }
   .main .overview-section .card__container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1.875rem;
