--- a/assets/css/2-componentes/_2-card-section.scss
+++ b/assets/css/2-componentes/_2-card-section.scss
@@ -26,12 +26,11 @@
                 margin-bottom: 1.75rem;
 
                 .card__icon {
-                    background-image: url(../../img/icon-facebook.svg);
                     background-repeat: no-repeat;
                     width: 1.25rem;
                     height: 1.25rem;
                 }
-
+                
                 .card__username {
                     @include font-styling($DesaturatedBlue, .75rem, 700);
 
@@ -70,18 +69,13 @@
                 gap: .25rem;
 
                 .card__icon {
-                    background-image: url(../../img/icon-up.svg);
                     background-repeat: no-repeat;
                     width: .5rem;
                     height: .25rem;
                 }
 
                 &-count {
-                    @include font-styling($LightGrayishBlue, .75rem, 700);
-
-                    &.light {
-                        color: $LimeGreen;
-                    }
+                    @include font-styling('', .75rem, 700);
                 }
             }
         }
