--- a/assets/css/2-componentes/_3-overview-section.scss
+++ b/assets/css/2-componentes/_3-overview-section.scss
@@ -42,7 +42,6 @@
                     }
 
                     .card__icon {
-                        background-image: url(../../img/icon-facebook.svg);
                         background-repeat: no-repeat;
                         width: 1.25rem;
                         height: 1.25rem;
@@ -68,14 +67,13 @@
                         gap: .125rem;
 
                         .card__icon {
-                            background-image: url(../../img/icon-up.svg);
                             background-repeat: no-repeat;
                             width: .5rem;
                             height: .25rem;
                         }
 
                         .card__percentage {
-                            @include font-styling($LimeGreen, .75rem, 700);
+                            @include font-styling('', .75rem, 700);
                         }
                     }
                 }
