Finalizando evento de troca de tema Dark/Light

--- a/assets/css/1-base/base.css
+++ b/assets/css/1-base/base.css
@@ -162,7 +162,7 @@ table {
   margin-bottom: 1.5rem;
 }
 .header__branding.light {
-  border-color: DarkGrayishBlue;
+  border-color: hsl(230, 22%, 74%);
 }
 .header__branding .header__title {
   color: hsl(0, 0%, 100%);
