--- a/assets/css/2-componentes/_1-header.scss
+++ b/assets/css/2-componentes/_1-header.scss
@@ -28,7 +28,7 @@
         margin-bottom: 1.5rem;
 
         &.light {
-            border-color: DarkGrayishBlue;
+            border-color:  $ToggleLightTheme;
         }
 
         .header__title {
