--- a/assets/css/1-base/base.css
+++ b/assets/css/1-base/base.css
@@ -300,7 +300,7 @@ table {
 }
 .main .card-section .card {
   background-color: hsl(228, 28%, 20%);
-  border-top: 0.25rem solid hsl(208, 92%, 53%);
+  border-top: 0.25rem solid transparent;
   border-radius: 0.25rem;
   padding: 1.75rem 0 1.5rem 0;
 }
@@ -364,6 +364,29 @@ table {
   color: "";
   font-size: 0.75rem;
   font-weight: 700;
+}
+.main .card-section .card.facebook {
+  border-color: hsl(208, 92%, 53%);
+}
+.main .card-section .card.twitter {
+  border-color: hsl(203, 89%, 53%);
+}
+.main .card-section .card.instagram {
+  border-top: none;
+  position: relative;
+  overflow: hidden;
+}
+.main .card-section .card.instagram::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0.25rem; /* Ajuste a altura desejada para o início do degradê */
+  background: linear-gradient(to right, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
+}
+.main .card-section .card.youtube {
+  border-color: hsl(348, 97%, 39%);
 }
 
 @media screen and (min-width: 768px) {
