--- a/assets/css/2-componentes/_2-card-section.scss
+++ b/assets/css/2-componentes/_2-card-section.scss
@@ -9,7 +9,7 @@
 
         .card {
             background-color: $DarkDesaturatedBlue;
-            border-top: .25rem solid $Facebook;
+            border-top: .25rem solid transparent;
             border-radius: .25rem;
 
             padding: 1.75rem 0 1.5rem 0;
@@ -77,6 +77,34 @@
                 &-count {
                     @include font-styling('', .75rem, 700);
                 }
+            }
+
+            &.facebook {
+                border-color: $Facebook;
+            }
+
+            &.twitter {
+                border-color: $Twitter;
+            }
+
+            &.instagram {
+                border-top: none;
+                position: relative;
+                overflow: hidden;
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: .25rem; /* Ajuste a altura desejada para o início do degradê */
+                    background: linear-gradient(to right, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
+                }
+            }
+
+            &.youtube {
+                border-color: $YouTube;
             }
         }
     }
