Criando cards da seção Overview de maneira dinâmica e adicionando estilizações finais

--- a/assets/css/1-base/_variaveis.scss
+++ b/assets/css/1-base/_variaveis.scss
@@ -13,6 +13,7 @@ $ToggleDarkTheme: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
 $DarkBlue: hsl(230, 17%, 14%);
 $VeryDarkBlue: hsl(232, 19%, 15%);
 $DarkDesaturatedBlue: hsl(228, 28%, 20%);
+$DarkDesaturatedBlueHover: hsl(228, 26, 27);
 $DesaturatedBlue: hsl(228, 34%, 66%);
 $White: hsl(0, 0%, 100%);
 /*Light Theme*/
@@ -20,6 +21,7 @@ $ToggleLightTheme: hsl(230, 22%, 74%);
 
 $VeryPaleBlue: hsl(225, 100%, 98%);
 $LightGrayishBlue: hsl(227, 47%, 96%);
+$LightGrayishBlueHover: hsl(232, 33, 91);
 $DarkGrayishBlue: hsl(228, 12%, 44%);
 
 /* Font */
