--- a/assets/css/1-base/base.css
+++ b/assets/css/1-base/base.css
@@ -226,6 +226,9 @@ table {
 .header__dark-mode-switch.light {
   background-image: linear-gradient(to right, hsl(230, 22%, 74%) 10%, hsl(230, 22%, 74%) 100%);
 }
+.header__dark-mode-switch.light:hover {
+  background-image: linear-gradient(to right, hsl(210, 78%, 56%) 10%, hsl(146, 68%, 55%) 100%);
+}
 
 @media screen and (min-width: 992px) {
   .header {
@@ -302,10 +305,17 @@ table {
   background-color: hsl(228, 28%, 20%);
   border-top: 0.25rem solid transparent;
   border-radius: 0.25rem;
+  cursor: pointer;
   padding: 1.75rem 0 1.5rem 0;
+}
+.main .card-section .card:hover {
+  background-color: hsl(228, 26%, 27%);
 }
 .main .card-section .card.light {
   background-color: hsl(227, 47%, 96%);
+}
+.main .card-section .card.light:hover {
+  background-color: hsl(232, 33%, 91%);
 }
 .main .card-section .card__info {
   display: flex;
@@ -464,10 +474,17 @@ table {
 .main .overview-section .card__container .card {
   background-color: hsl(228, 28%, 20%);
   border-radius: 0.25rem;
+  cursor: pointer;
   padding: 1.5rem;
+}
+.main .overview-section .card__container .card:hover {
+  background-color: hsl(228, 26%, 27%);
 }
 .main .overview-section .card__container .card.light {
   background-color: hsl(227, 47%, 96%);
+}
+.main .overview-section .card__container .card.light:hover {
+  background-color: hsl(232, 33%, 91%);
 }
 .main .overview-section .card__container .card__info {
   display: flex;
