--- a/assets/css/2-componentes/_2-card-section.scss
+++ b/assets/css/2-componentes/_2-card-section.scss
@@ -11,11 +11,20 @@
             background-color: $DarkDesaturatedBlue;
             border-top: .25rem solid transparent;
             border-radius: .25rem;
+            cursor: pointer;
 
             padding: 1.75rem 0 1.5rem 0;
 
+            &:hover {
+                background-color: $DarkDesaturatedBlueHover;
+            }
+
             &.light {
                 background-color: $LightGrayishBlue;
+
+                &:hover {
+                    background-color: $LightGrayishBlueHover;
+                }
             }
 
             &__info {
